--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* ---- reset ---- */
 
-body {
+#particles-js{
   margin: 0;
   background-color: #17182f;
 }
@@ -18,3 +18,8 @@ canvas {
   width: 100%;
   height: 100%;
 }
+
+/*.mid{
+    color: #46494f;
+     padding:    
+}*/
