--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,39 @@
 #particles-js{
   margin: 0;
   background-color: #17182f;
+height: 43%;
+ position: absolute;
+  width: 100%;
+      /*position: fixed;*/
+    
+
 }
 
 canvas {
   display: block;
-  vertical-align: bottom;
+  
 }
 
 
 /* ---- particles.js container ---- */
 
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.mid{
+    
+    background-color:  #292b30;
+    color: #e5d579;
+    padding-top: 20%;
+    font-family: Roboto,sans-serif;
+   
+}
+@media screen and (min-width: 601px) {
+  div.example {
+    font-size: 80px;
+  }
 }
 
-/*.mid{
-    color: #46494f;
-     padding:    
-}*/
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 600px) {
+  div.example {
+    font-size: 30px;
+  }
+}
